# ChangeLog for media-gfx/gifsicle
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.22 2009/01/27 10:48:48 armin76 Exp $

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> gifsicle-1.52.ebuild:
  sparc/x86 stable wrt #256171

  24 Jan 2009; nixnut <nixnut@gentoo.org> gifsicle-1.52.ebuild:
  ppc stable #256171

*gifsicle-1.52 (17 Dec 2008)

  17 Dec 2008; Markus Meier <maekke@gentoo.org> +gifsicle-1.52.ebuild:
  version bump, reported in bug #250596

  22 May 2008; Markus Meier <maekke@gentoo.org> gifsicle-1.44.ebuild:
  shorten DESCRIPTION

  15 Jan 2008; Fabian Groffen <grobian@gentoo.org> gifsicle-1.44.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; gifsicle-1.44.ebuild:
  Drop virtual/x11 references.

  03 Jun 2007; Raúl Porcel <armin76@gentoo.org> gifsicle-1.44.ebuild:
  Add ~alpha wrt #173108

  24 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> gifsicle-1.44.ebuild:
  Stable on sparc

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> gifsicle-1.44.ebuild:
  Stable  on ppc64; bug #170840

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> gifsicle-1.44.ebuild:
  Keyworded ~sparc wrt #170430

  30 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -gifsicle-1.40.ebuild:
  clean out old, non-modX ebuild

  21 Jul 2006; Joshua Jackson <tsunam@gentoo.org> gifsicle-1.44.ebuild:
  Stable x86; bug #116807

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gifsicle-1.44.ebuild:
  ppc stable, bug #116807

  16 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> gifsicle-1.44.ebuild:
  1.44 ready for modular X. Fixes bug 116807. Thanks to Keri Harris
  <harriskeri at mcs dot vuw dot ac dot nz>.

*gifsicle-1.44 (20 Dec 2005)

  20 Dec 2005; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +gifsicle-1.44.ebuild:
  1.44 version bump for bug 115967. Thanks to Ed Cates <ed at cates dot net>.