@@ -1,6 +1,4 @@
-DIST gifsicle-1.44.tar.gz 228882 RMD160 1e4ad7b64af02b757379db043da859361c6ad1d2 SHA1 3ae917adeb7240f443cc724e21f67f32ea604bfa SHA256 a8e5283860448c5f61f9477570e3dbd373ffb92f83b22ad4db8fa8dd2ee9539d
 DIST gifsicle-1.52.tar.gz 249441 RMD160 79fcc53afcfae8598d91f6897eecfb45f0ae6a8f SHA1 e3252cb888e49dc548e35987c0249c74616d165c SHA256 f3ad1641d70e7932e5e4c3b128639d0b0ffdee83b9c72f849ccb90b9f33be4ba
-EBUILD gifsicle-1.44.ebuild 869 RMD160 003b6751ce2362932d12622250fed8e3db9adf4b SHA1 7c4e68e9f53c951b8345e68c865ca6a199464fbc SHA256 03d0324908ea5237705a4b08f8346d9d721ad21e15d80ff29e1472dec0cf5dd1
-EBUILD gifsicle-1.52.ebuild 869 RMD160 6a85775f42936530f066ff8693c0516d7592f4e9 SHA1 343e4cb55d4b1d6c6a13094203e42afaa2f9dff3 SHA256 4c6c02923e6f9f252ce6cafa7017a8ef2c5791c6fba6fc36e46b24d46cd5da52
-MISC ChangeLog 2642 RMD160 379b361f0dc6d3fd93413ddb9d3b637f7aaad01f SHA1 96d124f23d0945e7ad3a02718e9c75828542b9a0 SHA256 dd40e2798bd07ca86b5fdb3989f1e479762eebd7cc8bd81be937c668d0df2503
+EBUILD gifsicle-1.52.ebuild 888 RMD160 3af5701c3e814f3be3f972093851aef60649524d SHA1 190606228fe8bca1c8287460af75b57e31b4c502 SHA256 3ec3769dfd2f122ad816472f0eead72355ec97c0bb86cf2ccbaec798c56dad3f
+MISC ChangeLog 2766 RMD160 0d6c19b93ce99c2c352d1d82cb941e18171932ef SHA1 6a7047266eb8fdffd283a1db0e2c1562058f3e34 SHA256 daed091d623d9b32e587fe74f76fad42704c9f2d738266d991cf943f0b7d0fef
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
