@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gifsicle
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.22 2009/01/27 10:48:48 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gifsicle/ChangeLog,v 1.23 2009/02/07 21:23:53 maekke Exp $
+
+  07 Feb 2009; Markus Meier <maekke@gentoo.org> -gifsicle-1.44.ebuild,
+  gifsicle-1.52.ebuild:
+  assign RDEPEND, remove old
 
   27 Jan 2009; Raúl Porcel <armin76@gentoo.org> gifsicle-1.52.ebuild:
   sparc/x86 stable wrt #256171
